# rosbag_remote_record

./: CMakeLists.txt  package.xml
scripts/: rosbag_remote_record.py
